--- a/style/restaurant.css
+++ b/style/restaurant.css
@@ -1,20 +1,96 @@
-/* font-work-sans */
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* Universal */
+* {
+    margin: 0;
+    padding: 0;
 
+}
 
 /* Banner */
-#banner{
+#banner {
     height: 919px;
     width: 1920px;
     position: absolute;
-    background-image: linear-gradient(0deg, rgb(9, 9, 9) 3.482%,rgba(16, 16, 16, 0) 101.632%), url("../assets/hero-bg.png");
-    background-repeat: no-repeat;   
+    background-image: linear-gradient(0deg, rgb(9, 9, 9) 3.482%, rgba(16, 16, 16, 0) 101.632%), url("../assets/hero-bg.png");
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   background-color: rgb(255, 255, 255);
+
+
 }
 
+#banner .banner-content {
+    width: 1023px;
+    height: 391px;
+
+}
+
+#banner .banner-content .sub-title {
+    font-size: 32px;
+    font-weight: 600;
+    font-family: Work Sans;
+    line-height: 38px;
+    letter-spacing: 0;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    opacity: 0.8;
+    gap: 16;
+    padding: 0px;
+    margin-bottom: 16px;
 
 
+}
 
+#banner .banner-content .heading {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 80px;
+    letter-spacing: 0px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    gap: 16;
+    padding: 0px;
+    margin-bottom: 24px;
+
+
+}
+
+.descrip {
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-bottom: 32px;
+
+
+}
+
+.cta {
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 8px;
+    padding: 21px 32px 21px 32px;
+    background: rgb(82, 195, 3);
+    border: none;
+       
+}
+
+.cta-container{
+    text-align: center;
+
+}
