--- a/style/restaurant.css
+++ b/style/restaurant.css
@@ -11,7 +11,6 @@
 #banner {
     height: 919px;
     width: 1920px;
-    position: absolute;
     background-image: linear-gradient(0deg, rgb(9, 9, 9) 3.482%, rgba(16, 16, 16, 0) 101.632%), url("../assets/hero-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -87,10 +86,41 @@
     padding: 21px 32px 21px 32px;
     background: rgb(82, 195, 3);
     border: none;
+   
        
+
 }
 
 .cta-container{
     text-align: center;
 
+}
+
+
+/* Card Box */
+#box{
+    width: 1320px;
+    height:742px;
+
+}
+
+.box-subtitle{
+    color: rgb(16, 16, 16);
+font-family: Work Sans;
+font-size: 24px;
+font-weight: 500;
+line-height: 28px;
+letter-spacing: 0%;
+text-align: center;
+opacity: 0.6;
+}
+
+.box-title{
+    color: rgb(16, 16, 16);
+font-family: Work Sans;
+font-size: 48px;
+font-weight: 700;
+line-height: 64px;
+letter-spacing: 0%;
+text-align: center;
 }
