--- a/style/restaurant.css
+++ b/style/restaurant.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-   background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
 
 
 }
@@ -74,7 +74,7 @@
 
 }
 
-.cta {
+.cta-1 {
     color: rgb(255, 255, 255);
     font-family: Work Sans;
     font-size: 20px;
@@ -86,41 +86,114 @@
     padding: 21px 32px 21px 32px;
     background: rgb(82, 195, 3);
     border: none;
-   
-       
+
+
 
 }
 
-.cta-container{
+.cta-container {
     text-align: center;
 
 }
 
 
 /* Card Box */
-#box{
+.card-box {
+    width: 1920px;
+    height: 1222px;
+
+
+}
+
+.card-box-container {
     width: 1320px;
-    height:742px;
+    height: 871px;
 
 }
 
-.box-subtitle{
-    color: rgb(16, 16, 16);
-font-family: Work Sans;
-font-size: 24px;
-font-weight: 500;
-line-height: 28px;
-letter-spacing: 0%;
-text-align: center;
-opacity: 0.6;
+.Fav-Restaurant {
+    font-family: Work Sans;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    color: #101010;
+    opacity: 0.6;
+    margin-bottom: 16px;
+
+
 }
 
-.box-title{
+.Fav-Food {
+    font-family: Work Sans;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+    color: #101010;
+    margin-bottom: 96px;
+
+
+
+}
+
+.card {
+    width: 424px;
+    height: 522px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.rectangle {
+    width: 424px;
+    border-radius: 16px;
+    margin-bottom: 32px;
+
+}
+
+img {
+    width: 100%;
+}
+
+.cta-2 {
+    font-family: Work Sans;
+    font-size: 24px;
+    font-weight: 600;
+    color: #101010;
+    background-color: rgba(82, 195, 3, 0.15);
+
+    border-radius: 8px;
+    padding: 14px 32px 14px 32px;
+    border: none;
+    text-align: center;
+    width: 187px;
+    height: 56px;
+    margin-bottom: 24px;
+
+}
+
+.discount-text {
     color: rgb(16, 16, 16);
-font-family: Work Sans;
-font-size: 48px;
-font-weight: 700;
-line-height: 64px;
-letter-spacing: 0%;
-text-align: center;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 47px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 24px;
+
+}
+
+.restaurant-brief {
+    color: rgb(16, 16, 16);
+    font-family: Work Sans;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+
 }
