--- a/style/restaurant.css
+++ b/style/restaurant.css
@@ -74,7 +74,7 @@
 
 }
 
-.cta-1 {
+.cta {
     color: rgb(255, 255, 255);
     font-family: Work Sans;
     font-size: 20px;
@@ -97,103 +97,109 @@
 }
 
 
+
+
 /* Card Box */
-.card-box {
+#card-box {
     width: 1920px;
     height: 1222px;
 
 
 }
 
-.card-box-container {
-    width: 1320px;
-    height: 871px;
+#card-box .title {
+    color: rgb(16, 16, 16);
+    font-family: Work Sans;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 64px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 48px;
 
 }
 
-.Fav-Restaurant {
+#card-box .subtitle {
+    color: rgb(16, 16, 16);
     font-family: Work Sans;
     font-size: 24px;
     font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0%;
     text-align: center;
-    color: #101010;
     opacity: 0.6;
     margin-bottom: 16px;
 
 
-}
-
-.Fav-Food {
-    font-family: Work Sans;
-    font-size: 48px;
-    font-weight: 700;
-    text-align: center;
-    color: #101010;
-    margin-bottom: 96px;
-
-
 
 }
+
+
 
 .card {
-    width: 424px;
-    height: 522px;
+    max-width: 424px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-
 }
 
-.rectangle {
+.card .image-box {
     width: 424px;
-    border-radius: 16px;
+    height: 283px;
     margin-bottom: 32px;
 
+
 }
 
-img {
+.card .image-box img {
     width: 100%;
+    height: 100%;
 }
 
-.cta-2 {
-    font-family: Work Sans;
-    font-size: 24px;
-    font-weight: 600;
-    color: #101010;
-    background-color: rgba(82, 195, 3, 0.15);
+.card-container {
+    margin-top: 48px;
+    display: flex;
+    justify-content: space-around
+}
 
-    border-radius: 8px;
-    padding: 14px 32px 14px 32px;
-    border: none;
-    text-align: center;
-    width: 187px;
-    height: 56px;
-    margin-bottom: 24px;
+.container {
+    margin-top: 175px;
 
 }
 
-.discount-text {
-    color: rgb(16, 16, 16);
+h1 {
+    margin-top: 24px;
     font-family: Work Sans;
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 47px;
-    letter-spacing: 0%;
-    text-align: center;
-    margin-bottom: 24px;
 
 }
 
-.restaurant-brief {
-    color: rgb(16, 16, 16);
+.restaurantdescription {
+    margin-top: 16px;
     font-family: Work Sans;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 0%;
-    text-align: center;
-    opacity: 0.7;
+    text-align: left;
+}
 
+.adjust {
+    margin-top: -32px;
+
+}
+
+.adjust2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.adjust2 .cta {
+    width: 212px;
+    margin-top: 64px;
+    cursor: pointer;
+
+
+}
+
+.pointer {
+    cursor: pointer;
 }
